[gd_scene load_steps=5 format=3 uid="uid://c4xi88wgdiow0"]

[ext_resource type="Script" uid="uid://bvwx8k7j5a2qd" path="res://scripts/ui/Settings.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://0hby3feg8k8g" path="res://pictures/title_bg_2.png" id="2"]
[ext_resource type="FontFile" uid="uid://cbwnpfuof7ck0" path="res://fonts/m5x7.ttf" id="3_iwbf0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main"]
bg_color = Color(0.39906177, 0.67744213, 0.3954853, 0.53333336)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.022258613, 0.36141455, 0, 1)
shadow_size = 2

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 2

[node name="Card" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -280.0
offset_right = 250.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main")

[node name="Margin" type="MarginContainer" parent="Card"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Card/Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Card/Margin/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolume" type="VBoxContainer" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Card/Margin/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Master Volume"

[node name="Slider" type="HSlider" parent="Card/Margin/VBoxContainer/MasterVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicVolume" type="VBoxContainer" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Card/Margin/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Music Volume"

[node name="Slider" type="HSlider" parent="Card/Margin/VBoxContainer/MusicVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXVolume" type="VBoxContainer" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Card/Margin/VBoxContainer/SFXVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Game Elements Volume"

[node name="Slider" type="HSlider" parent="Card/Margin/VBoxContainer/SFXVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="UIVolume" type="VBoxContainer" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Card/Margin/VBoxContainer/UIVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "UI Volume"

[node name="Slider" type="HSlider" parent="Card/Margin/VBoxContainer/UIVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="Spacer2" type="Control" parent="Card/Margin/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SaveButton" type="Button" parent="Card/Margin/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Save"

[node name="HowToPlayButton" type="Button" parent="Card/Margin/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "How to Play"

[node name="BackButton" type="Button" parent="Card/Margin/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Back to Menu"

[node name="QuitButton" type="Button" parent="Card/Margin/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Quit Game"
